--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  p {
+    @apply lg:text-[15px] text-[10px] tracking-wider;
+  }
+  h1 {
+    @apply lg:text-2xl text-lg font-semibold;
+  }
+  h2 {
+    @apply lg:text-xl text-[15px];
+  }
+  h3 {
+    @apply lg:text-lg text-[12px];
+  }
+  ul {
+    @apply list-outside;
+  }
+  ul > li {
+    @apply list-disc;
+  }
+  ul > ol {
+    @apply list-decimal;
+  }
+}
